Bump upstreams for 2022.09 Chlorine
Adopt the following versions:
- odlparent-11.0.0
- infrautils-4.0.0
- yangtools-9.0.0
- mdsal-10.0.0
- controller-6.0.0
- aaa-0.16.0
- netconf-4.0.0

Change-Id: Iafb6b4012ed7cce7b3d621b2fc7bb12dc8c2aaf0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>